# todo-console-app

./: .gitignore  README.md  debug.py  pyproject.toml  tasks.json
src/tasks/: __init__.py  app_config.py  logging.py
src/tasks/cli/: __init__.py  app.py  context.py  debug.py  errors.py  lists.py  main.py  selector.py  tasks.py  utils.py
src/tasks/core/: __init__.py  task.py  tasks.py  tasks_list.py  tasks_lists.py
src/tasks/tui/: __init__.py  app.py  task_form_modal.py  tasks_list.py  tasks_list_item.py  tasksapp.tcss
